added a simulation to understand the real coverage in asymptotics CI with small samples, very useful

--- a/confidence_interval_modelisation.ipynb
+++ b/confidence_interval_modelisation.ipynb
@@ -255,6 +255,87 @@
     "print(f\"Intervalle de confiance: [{ic2[0]:.3f}, {ic2[1]:.3f}]\")\n",
     "print(test_significativite(ic2))\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "f80c146a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   Taille n1=n2  Couverture IC exact (%)  Couverture IC asymptotique (%)\n",
+      "0             3                     95.0                            87.9\n",
+      "1             5                     95.3                            90.9\n",
+      "2            10                     94.8                            93.6\n",
+      "3            30                     96.2                            96.0\n",
+      "4            50                     95.6                            95.4\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "from scipy.stats import t, norm\n",
+    "\n",
+    "# Paramètres\n",
+    "mu1, mu2 = 50, 55       # vraies moyennes\n",
+    "sigma = 10              # écart-type commun\n",
+    "alpha = 0.05\n",
+    "n_sim = 1000            # nombre de simulations pour chaque taille\n",
+    "\n",
+    "# Tailles d'échantillon à tester\n",
+    "n_values = [3, 5, 10, 30, 50]\n",
+    "\n",
+    "# Stockage des résultats\n",
+    "results = []\n",
+    "\n",
+    "for n in n_values:\n",
+    "    contain_exact = 0\n",
+    "    contain_asympt = 0\n",
+    "    true_diff = mu1 - mu2  # valeur réelle\n",
+    "\n",
+    "    for _ in range(n_sim):\n",
+    "        # Génération des échantillons\n",
+    "        X1 = np.random.normal(mu1, sigma, n)\n",
+    "        X2 = np.random.normal(mu2, sigma, n)\n",
+    "\n",
+    "        # Moyennes et variances\n",
+    "        mean_diff = np.mean(X1) - np.mean(X2)\n",
+    "        s1_sq = np.var(X1, ddof=1)\n",
+    "        s2_sq = np.var(X2, ddof=1)\n",
+    "\n",
+    "        # Variance poolée\n",
+    "        s_p = np.sqrt(((n - 1) * s1_sq + (n - 1) * s2_sq) / (2 * n - 2))\n",
+    "        se = s_p * np.sqrt(1 / n + 1 / n)\n",
+    "\n",
+    "        # IC exact (Student)\n",
+    "        t_crit = t.ppf(1 - alpha / 2, df=2 * n - 2)\n",
+    "        ci_exact = (mean_diff - t_crit * se, mean_diff + t_crit * se)\n",
+    "\n",
+    "        # IC asymptotique (Normale)\n",
+    "        z_crit = norm.ppf(1 - alpha / 2)\n",
+    "        ci_asympt = (mean_diff - z_crit * se, mean_diff + z_crit * se)\n",
+    "\n",
+    "        # Vérification de couverture\n",
+    "        if ci_exact[0] <= true_diff <= ci_exact[1]:\n",
+    "            contain_exact += 1\n",
+    "        if ci_asympt[0] <= true_diff <= ci_asympt[1]:\n",
+    "            contain_asympt += 1\n",
+    "\n",
+    "    # Stocker les proportions\n",
+    "    results.append({\n",
+    "        \"Taille n1=n2\": n,\n",
+    "        \"Couverture IC exact (%)\": contain_exact / n_sim * 100,\n",
+    "        \"Couverture IC asymptotique (%)\": contain_asympt / n_sim * 100\n",
+    "    })\n",
+    "\n",
+    "# Affichage sous forme de tableau\n",
+    "df_results = pd.DataFrame(results)\n",
+    "print(df_results)\n"
+   ]
   }
  ],
  "metadata": {
