--- a/confidence_interval_modelisation.ipynb
+++ b/confidence_interval_modelisation.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "d97da8f5",
+   "metadata": {},
+   "source": [
+    "Dans ce notebok, nous étudions la construction et les propriétés des intervalles de confiance basés sur la loi de Student. Nous comparons les intervalles exacts (fondés sur la loi de Student) aux intervalles « asymptotiques » (basés sur la loi normale via le théorème central limite) et nous montrons, par simulations, que les premiers sont systématiquement plus larges, mais plus précis pour de petits échantillons. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "7b099abd",
